# rust_boot_loader

./: Cargo.toml  Makefile  README.md  memo.md
src/: lib.rs  main.rs  serial.rs  writer.rs
tests/: basicboot.rs
